[tool.poetry]
name = "replinfo"
version = "0.1.0"
description = ""
authors = ["ArgoPanoptes <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Paste = "^3.5.0"
cutandpaste = "^0.4.0"
Flask = "^2.0.1"
waitress = "^2.0.0"
flask-ask-sdk = "^1.0.0"
ask-sdk-core = "^1.16.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
